# pythongpu

./: .gitignore  CLAUDE.md  README.md  SCRIPT_MANIFEST.md  aggregate_fractal_sweep.py  analyze_wada.py  box_counting.py  download_hcp_100307.py  dti_spectra_index.json  kuramoto_basins.py  math_textbook.md  plot_kuramoto_basins.py  pyproject.toml  pytest.ini  remove_claude_commit_callback.py  remove_claude_commit_callback2.py  replace.txt  ruff_report.txt  run_sim.py
.claude/: claude.md
.githooks/: commit-msg
clv_results_final/: slurm-4555717.out
data/: DTI-og.mat
output/: cluster_assignments.tsv  eigvals_L_norm.txt  eigvals_L_w.txt  spectral_cluster_labels.txt
pythongpu/: github_commands.txt  pipeline_notes.md
pythongpu.git-backup/: config  packed-refs
pythongpu.git-work/: packed-refs
pythongpu.git-work2/: packed-refs
pythongpu.git-work3/: config  packed-refs
scripts/: benchmark_scaling.py  plot_basin_maps_k045_050.py  plot_dti_vs_null_clv.py  plot_hr_clv_seeded_graphs.py  plot_hr_true_vps_vs_surrogate.py  plot_hr_vps_clv_comparison.py  plot_onset_sweep.py  plot_publication_figs.py  plot_scaling_benchmark.py  plot_true_vps_vs_surrogate.py  plot_vps_clv_comparison.py  pull_acres_outputs.sh  register_dti.py  run_clv_null_sweep.sh  run_clv_sweep.sh  run_correlate_fmri.py  run_dti_adjacency.py  run_dti_spectral.py  run_hr_followup.sh  run_inspect.py  run_inspect_derivative_npzs.py  run_plot_matrix.py  run_sim.py  run_sparse_brain_sim.py  run_vps.py  seeded_random_graph_sweep.py  submit_benchmark_scaling.sh  submit_clv_sweep.sh  submit_highres_slices.sh  (+9 more)
(+149 files in other folders)
