[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pythongpu"
version = "0.1.0"
description = "GPU-accelerated network dynamical systems, fractal basin analysis, causal inference, and multifractal analysis for brain data."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "torch",
    "matplotlib",
    "pandas",
    "scipy",
    "scikit-learn",
    "networkx",
]

[project.optional-dependencies]
neuro = ["nibabel", "nilearn"]
dev = ["pytest", "tqdm", "seaborn"]

# Console entry points — each maps a shell command to a module's main().
# These replace the need to remember file paths: `pythongpu-vps ...` instead
# of `python3 scripts/run_vps.py ...`. The scripts/ wrappers remain as an
# equivalent path-based alternative.
[project.scripts]
pythongpu-vps = "pythongpu.processing.feature_extraction:main"
pythongpu-correlate-fmri = "pythongpu.networks.fmri_loader:main"
pythongpu-plot-matrix = "pythongpu.visualization.plot_matrix:main"
pythongpu-inspect = "pythongpu.pipeline.inspect_data:main"
pythongpu-sparse-brain-sim = "pythongpu.pipeline.sparse_brain_sim:main"

# Flat layout: the importable package `pythongpu` lives at the repo root, so
# `import pythongpu` works from the repo root with no install and no
# PYTHONPATH juggling. `include` keeps `tests`/`scripts` out of the wheel.
[tool.setuptools.packages.find]
where = ["."]
include = ["pythongpu*"]
